Tilføjet kurv og ordre sider

--- a/VoresWebshopSolution/VoresWebshop/Views/Shared/_homepageBasis.cshtml
+++ b/VoresWebshopSolution/VoresWebshop/Views/Shared/_homepageBasis.cshtml
@@ -10,7 +10,8 @@
     <nav>
         <ul>
             <li>@Html.ActionLink("Hjem", "Index", "Produkt")</li>
-            <li>@Html.ActionLink("Ordrer", "Index", "Ordre")</li>
+            <li>@Html.ActionLink("Ordrer", "Index", "Ordrer")</li>
+            <li>@Html.ActionLink("Kurv", "Kurv", "Ordrer")</li>
             <li>@Html.ActionLink("Kontakt", "Index", "Kontakt")</li>
             <li>@Html.ActionLink("Om os", "Index", "OmOs")</li>
         </ul>
